<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PocketOps</string>
    <string name="quick_tile_title">PocketOps</string>
    <string name="quick_tile_subtitle">Tap to open tools</string>
    <string name="shortcut_long_label">Show QR Code</string>
    
    <string name="shortcut_quick_upi_short">Pay Collect</string>
    <string name="shortcut_quick_upi_long">Open Pay Collect QR Generator</string>
    
    <string name="shortcut_quick_chat_short">WhatsApp Direct</string>
    <string name="shortcut_quick_chat_long">Direct WhatsApp Chat</string>
    
    <string name="shortcut_quick_insta_short">Social Profiler</string>
    <string name="shortcut_quick_insta_long">Search Social Profiles</string>
</resources>